--- a/AI_Agent.ipynb
+++ b/AI_Agent.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO62I6qtQuidyQW9kx5o5in",
+      "authorship_tag": "ABX9TyNjzwBnpNsy0WQdRLA361W9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "T1HHhmXRnBYb"
       },
@@ -52,7 +52,7 @@
       "source": [
         "from openai import OpenAI\n",
         "\n",
-        "client = OpenAI(api_key='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')"
+        "client = OpenAI(api_key='API_KEY')"
       ]
     },
     {
@@ -74,7 +74,7 @@
       "metadata": {
         "id": "aCYsLKkusSAn"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -99,7 +99,7 @@
       "metadata": {
         "id": "HQTr7DQqtHlM"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "vIhk21rztdAx"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
